--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,33 @@ header{
     width:100%;
     height: 10vh;
     background-color:rgb(52, 51, 51);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    color: white;
+    font-weight: 100;
 }
 header img{
+    display: flex;
     height: 10vh;
     width: auto;
+    margin-left: 8%;
+}
+header p{
+    margin-right:15%;
+}
+header a{
+    margin-right: 1%; 
+    text-decoration: none;
+    color:white;  
+    font-size: small;
 }
 footer{
     height:12vh;
     width:100%;
     background-color: rgb(25, 25, 49);
+}
+.banner{
+height:33vh;
+background-image: url(./assets/ba1.jpg);
 }
