--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ header {
     min-height: 10vh;
     background-color: rgb(52, 51, 51);
     display: flex;
+    flex-direction: row;
     justify-content: flex-start;
     align-items: center;
     color: white;
@@ -26,6 +27,7 @@ header img {
 
 header p {
     margin-right: 15%;
+    margin-top: 1.5%;
 }
 
 header a {
@@ -67,6 +69,14 @@ footer {
 .texto-banner p{
     width: 50%;
 }
+#oradores{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+   
+
+}
 #oradores p{
     text-align: center;
     margin-bottom: 0%;
@@ -76,4 +86,25 @@ footer {
     text-align: center;
     margin-top: 0%;
 }
+.card{
+    margin: 1%;
+}
+@media screen and (max-width:576px) {
+    #oradores{
+        align-items: center;
+        
+    }
+    #oradores .card{
+        margin-left: 25%;
+        
+    }
+}
+@media screen and (min-width:768px) {
+    #oradores{
+        max-width: 80%;
+        margin-left: 10%;
+    }
+   
+}
+
 
