--- a/styles.css
+++ b/styles.css
@@ -41,11 +41,18 @@ footer {
     height: 12vh;
     width: 100%;
     background-color: rgb(25, 25, 49);
+    color: antiquewhite;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 footer a {
     text-decoration: none;
-    color: antiquewhite;
+
     font-size: small;
 }
 
@@ -111,6 +118,7 @@ footer a {
     gap:3%;
     text-align: center;
     padding: 0;
+    height: 1.5rem;
     align-content: center;
      
 }
@@ -175,6 +183,16 @@ footer a {
     justify-content: center;
     width: 80%;
     margin-left: 10%;
+}
+
+#submit{
+    width: 100%;
+    height: 2rem;
+    border-radius: 5%;
+    background-color: rgb(2, 162, 2);
+    color: antiquewhite;
+    font-weight: 600;
+    border-color: rgb(2, 162, 2);
 }
 
 
