--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ header a:hover{
 }
 
 footer {
-    height: 12vh;
+    min-height: 12vh;
     width: 100%;
     background-color: rgb(25, 25, 49);
     color: antiquewhite;
@@ -233,6 +233,7 @@ footer a:hover{
     margin-right: 10%;
     margin-top: 3%;
     margin-bottom: 1%;
+    flex-wrap: wrap;
 
 }
 #descuentos #requisito{
@@ -297,19 +298,23 @@ color: gray;
     #oradores {
         align-items: center;
         width: 80%;
-
     }
 
     #oradores .card {
         margin-left: 25%;
         
-
     }
 
     .texto-banner p{
         width: 80%;
         padding-top: 5%;
     }
+
+    #estudiante, #trainee, #junior{
+        min-width: 80%;
+        margin-bottom: 2%;
+    }
+
 }
 
 @media screen and (min-width:768px) {
