--- a/styles.css
+++ b/styles.css
@@ -278,6 +278,13 @@ color: gray;
 
 #total{
     background-color: lightblue;
+    height: 2rem;
+    border-radius: 0.2rem;
+
+}
+#totalP{
+    padding-left: 0.5rem;
+    padding-top: 0.2rem;
 }
 #total::placeholder{
     color: rgb(29, 29, 122);
